# fastapi-simple-ml-serving

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/api/: main.py
app/api/v1/: endpoints.py
app/core/: config.py
app/services/: predictor.py  preprocessor.py  train_model.py
