[project]
name = "fastapi-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",
    "pre-commit>=4.2.0",
    "pytest",
    "pytest-redis>=3.1.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "ruff",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = ["import-untyped", "import-not-found"]


[tool.setuptools]
packages = ["app"]
